# comfyui-slapshot

./: CLAUDE.md  LICENSE  README.md  config.ini  nodes.py  pyproject.toml  requirements.txt
web/js/: slapshot.js
